fixed overflow scroll issue (#30)
Fixed an issue with scrolling on the applications page.

Reviewed-on: https://codeberg.org/reality-hack-inc/realityhack.world-frontend/pulls/30
Co-committed-by: Santiago Dimaren <sdimaren1@gmail.com>

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,7 +24,6 @@
 
 body {
   background-color: white;
-  overflow: hidden;
   position: relative;
 }
 
